# Master_thesis

./: CMakeLists.txt  README.md  performance.cfg
HDL/src/duplex/bidir/: bidir_duplex_fifo.v
script/: cfg.py  run_analysis.py
src/: datagen.cpp  transfer.cpp
